--- a/src/main/webapp/app/entities/eleve/eleve.component.html
+++ b/src/main/webapp/app/entities/eleve/eleve.component.html
@@ -63,7 +63,7 @@
             <ng-container *ngIf="getCritereRechercheService().ongletActive==menu && getCritereRechercheService().ongletActive!=='Résumé'">
                 <div class="col-sm-12 align-self-center">
                     <h4> {{menu}}</h4>
-                    <table class="table table-sm " [class.table-hover]="hover">
+                    <table class="table table-sm table-bordered" [class.table-hover]="hover">
                         <thead class="thead-dark">
                             <tr> 
                                  <th *ngFor=" let key of getkeys(getEleveSystemeInf(menu).eleveResume)" jhiTranslate="outilDiagnostic.eleve.{{menu}}.resume.{{key}}"></th>     
